[DEVELOP][MOD][2022-09-21] 1. 修改cmake输出信息的描述错误

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ set(LIBRARY_OUTPUT_PATH ${LIB_DIR})
 if(DEFINED INCLUDE_OUTPUT_DIR)
 message("already difined include file output directory: ${INCLUDE_OUTPUT_DIR}")
 else()
-message("not difined libarary output directory, using default:  ${BUILD_DIR}/include/")
+message("not difined include file output directory, using default:  ${BUILD_DIR}/include/")
 set(INCLUDE_OUTPUT_DIR ${BUILD_DIR}/include/)
 endif()
 
@@ -45,7 +45,7 @@ endif()
 if(DEFINED TMP_FILES_DIR)
 message("already difined cache file directory: ${TMP_FILES_DIR}")
 else()
-message("not difined libarary output directory, using default:  ${UT_DIR}/CMakeCaches/")
+message("not difined cache file directory, using default:  ${UT_DIR}/CMakeCaches/")
 set(TMP_FILES_DIR ${UT_DIR}/CMakeCaches/)
 endif()
 
